--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+    "@google/generative-ai": "^0.21.0",
     "@tanstack/react-query": "^5.25.0",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
